created constants in the CandidateValidator class and fixed errors in the StreamPractice class